syntax = "proto3";
package seckill;

// 使用正确的 go_package 路径，指向生成代码的目录
option go_package = "proto_output/seckill";

service Seckill{
  rpc ExecuteSeckill()
}

message SeckillRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message SeckillResponse {
  bool success = 1;
  string message = 2;
  int64 order_id = 3;
}